# georgia-legislation-webcrawler

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .yamllint  CHANGELOG.md  README.md  RECENT_UPDATES.md  REFACTORING_NOTES.md  SECURITY.md  accessibility-report.json  bill_details_cache.json  biome.json  debug_detail.html  debug_page.html  ga_legislation.json  index.html  manifest.json  package-lock.json  package.json  pre-commit-output.txt  pyproject.toml  requirements.txt  scraper.py  script.js  sw.js  validation-report.json  vite.config.ts  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  data-pipeline.yml  dependency-review.yml  deploy.yml  label.yml  semantic-release.yml  stale.yml  summary.yml  validate-pr-title.yml  validate.yml
archived/: README.md  scraper.py
backend/: README.md  __init__.py  api.py  legiscan_service.py  ollama_service.py  pipeline.py  scraper.py
docs/: BACKEND.md  CI_CD.md  CONTRIBUTING.md  DATA_SCHEMA.md  ENHANCEMENT_IDEAS.md  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  MULTILINGUAL_SUPPORT.md  REFACTORING_NOTES.md  SCRAPING_COMPLIANCE.md  TESTING_SUMMARY.md  TODO_LLM_PLAIN_ENGLISH.md
frontend/: README.md  TESTING.md  debug-upload.html  index.html  script.js  styles.css  test-data.json
scripts/: validate-accessibility.js  validate-schema.js
src/: App.css  App.tsx  types.ts  utils.ts  vite-env.d.ts
src/__tests__/: utils.test.ts
src/components/: AnalyticsTabs.tsx  AnimatedBackground.tsx  BillComparison.tsx  BillGrid.tsx  BillModal.tsx  BillOfTheDay.tsx  BillSimilarity.tsx  ChartsView.tsx  FavoritesModal.tsx  Filters.tsx  Header.tsx  HelpModal.tsx  LanguageSelector.tsx  LoadingAnimation.tsx  PWAInstall.tsx  QuickActions.tsx  ReadingProgress.tsx  RelatedBills.tsx  RepresentativeProfile.tsx  SavedSearches.tsx  SearchSuggestions.tsx  ShareButton.tsx  ShareButtons.tsx  Sidebar.tsx  SkeletonCard.tsx  SkeletonLoaders.tsx  Stats.tsx  TimelineVisualization.tsx  WordCloudView.tsx
src/components/__tests__/: AnalyticsTabs.test.tsx  Header.test.tsx  QuickActions.test.tsx  RelatedBills.test.tsx  RepresentativeProfile.test.tsx  Stats.test.tsx
src/hooks/: useAISummary.ts
src/i18n/: translations.ts
tests/frontend/: bill-processing.test.js  sorting.test.ts
