[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0", "wheel"]

[project]
authors = [
  {name = "Ben Go", email = "riyanimam@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP"
]
dependencies = [
  "requests>=2.31.0",
  "aiohttp>=3.9.0",
  "python-dotenv>=1.0.0"
]
description = "Georgia legislation tracker with LegiScan API integration and AI-powered plain English bill summaries"
keywords = ["georgia", "legislation", "legiscan", "bills", "ai-summary", "ollama"]
license = {text = "MIT"}
name = "georgia-legislation-webcrawler"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
  "ruff>=0.1.0",
  "mdformat>=0.7.17",
  "mdformat-gfm>=0.6.0",
  "mdformat-tables>=1.0.0",
  "markdownlint-cli>=0.37.0",
  "yamllint>=1.35.1",
  "mypy>=1.11.0",
  "types-requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/riyanimam/georgia-legislation-webcrawler"
Issues = "https://github.com/riyanimam/georgia-legislation-webcrawler/issues"
Repository = "https://github.com/riyanimam/georgia-legislation-webcrawler.git"

[tool.mdformat]
number = true
wrap = 100

[tool.mdformat.plugins.gfm]
strikethrough = true

[tool.mdformat.plugins.tables]
tables = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["aiohttp.*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "E501",  # line-length (handled by formatter)
  "W505"  # doc-line-too-long
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP"  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["scraper"]
